--- a/src/app/components/templates/nav/nav.component.css
+++ b/src/app/components/templates/nav/nav.component.css
@@ -1,8 +1,13 @@
-.container{
-    height: 85%;
-    width: 100%;
+.container {
+  height: 85%;
+  width: 100%;
+  background-color: rgb(79, 77, 77);
 }
 
-i{
-    padding-right: 0.6rem;
+i {
+  padding-right: 0.6rem;
 }
+
+/* .lateral {
+  background-color: rgba(47, 47, 47, 0.619);
+} */
