--- a/src/app/components/templates/nav/nav.component.css
+++ b/src/app/components/templates/nav/nav.component.css
@@ -3,11 +3,14 @@
   width: 100%;
   background-color: rgb(79, 77, 77);
 }
-
+.icone_home,
+.icone_categoria {
+  color: white;
+}
 i {
   padding-right: 0.6rem;
 }
 
-/* .lateral {
+.nav_lateral {
   background-color: rgba(47, 47, 47, 0.619);
-} */
+}
