--- a/src/app/components/templates/nav/nav.component.html
+++ b/src/app/components/templates/nav/nav.component.html
@@ -1,11 +1,11 @@
 <mat-sidenav-container class="container">
-  <mat-sidenav class="lateral" mode="side" opened>
+  <mat-sidenav class="nav_lateral" mode="side" opened>
     <mat-nav-list class="lista">
-      <a routerLink="" mat-list-item>
+      <a class="icone_home" routerLink="" mat-list-item>
         <i class="material-icons">home</i>
         Home
       </a>
-      <a mat-list-item>
+      <a routerLink="/categorias" class="icone_categoria" mat-list-item>
         <i class="material-icons">menu_book</i>
         Categorias
       </a>
