--- a/src/app/components/views/home/home.component.css
+++ b/src/app/components/views/home/home.component.css
@@ -1,6 +1,10 @@
 .home {
    width: 95%;
    margin: 1rem auto;
+   background-color: rgba(0, 0, 0, 0.24);
+}
+.title, .subtitle {
+   color: #fff;
 }
 
 @media(max-width: 450px) {
