--- a/src/app/components/views/categoria/categoria-read/categoria-read.component.html
+++ b/src/app/components/views/categoria/categoria-read/categoria-read.component.html
@@ -7,22 +7,22 @@
     <table class="table" mat-table>
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef>ID</th>
-        <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.id }}</td>
       </ng-container>
 
       <ng-container matColumnDef="nome">
         <th mat-header-cell *matHeaderCellDef>NOME</th>
-        <td mat-cell *matCellDef="let element">{{ element.nome }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.nome }}</td>
       </ng-container>
 
       <ng-container matColumnDef="descricao">
         <th mat-header-cell *matHeaderCellDef>DESCRIÇÃO</th>
-        <td mat-cell *matCellDef="let element">{{ element.descricao }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.descricao }}</td>
       </ng-container>
 
       <ng-container matColumnDef="acoes">
         <th mat-header-cell *matHeaderCellDef>AÇÕES</th>
-        <td mat-cell *matCellDef="let element">{{ element.acoes }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.acoes }}</td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
