--- a/src/app/components/views/categoria/categoria-read/categoria-read.component.css
+++ b/src/app/components/views/categoria/categoria-read/categoria-read.component.css
@@ -16,5 +16,26 @@
 
 .table {
   width: 100%;
-  /* background-color: rgba(0, 0, 0, 0); */
+}
+
+button{
+  margin-bottom: 1rem;
+}
+
+.livros {
+  margin-left: .5rem;
+  color: rgb(37, 125, 240);
+}
+
+.edit {
+  color: rgb(206, 173, 24);
+}
+
+.delete {
+  color: rgb(228, 56, 56);
+  margin-left: .5rem;
+}
+
+.mat-header{
+  width: 5rem;
 }
