criando categoria e tratando erros.

--- a/src/app/components/views/categoria/categoria-read/categoria-read.component.html
+++ b/src/app/components/views/categoria/categoria-read/categoria-read.component.html
@@ -3,7 +3,7 @@
     <h1>Categoria</h1>
   </div>
 
-  <button mat-elevation-z8 mat-raised-button color="primary">NOVA CATEGORIA</button>
+  <button mat-elevation-z8 mat-raised-button color="primary" routerLink="create">NOVA CATEGORIA</button>
 
   <div class="mat-elevation-z8 content-table">
     <table [dataSource]="categorias" class="table" mat-table>
