--- a/src/app/components/views/categoria/categoria-create/categoria-create.component.html
+++ b/src/app/components/views/categoria/categoria-create/categoria-create.component.html
@@ -12,6 +12,6 @@
 
   <div class="buttons">
     <button (click)="create()" mat-elevation-z8 mat-raised-button color="primary">CRIAR</button>
-    <button mat-elevation-z8 mat-raised-button color="warning">CANCELAR</button>
+    <button (click)="cancel()" mat-elevation-z8 mat-raised-button color="warning">CANCELAR</button>
   </div>
 </form>
