--- a/src/app/components/views/categoria/categoria-create/categoria-create.component.html
+++ b/src/app/components/views/categoria/categoria-create/categoria-create.component.html
@@ -6,7 +6,7 @@
     <input matInput [(ngModel)]="categoria.nome" type="text" name="nome" placeholder="Ex: Computação"/>
   </mat-form-field>
   <mat-form-field class="form">
-    <mat-label>Descricao</mat-label>
+    <mat-label>Descrição</mat-label>
     <textarea matInput [(ngModel)]="categoria.descricao" type="text" name="nome" placeholder="Ex: Livros de Computação"></textarea>
   </mat-form-field>
 
