--- a/src/app/components/views/categoria/categoria-read/categoria-read.component.html
+++ b/src/app/components/views/categoria/categoria-read/categoria-read.component.html
@@ -3,7 +3,14 @@
     <h1>Categoria</h1>
   </div>
 
-  <button mat-elevation-z8 mat-raised-button color="primary" routerLink="create">NOVA CATEGORIA</button>
+  <button
+    mat-elevation-z8
+    mat-raised-button
+    color="primary"
+    routerLink="create"
+  >
+    NOVA CATEGORIA
+  </button>
 
   <div class="mat-elevation-z8 content-table">
     <table [dataSource]="categorias" class="table" mat-table>
@@ -34,10 +41,10 @@
       <ng-container matColumnDef="acoes">
         <th class="mat-header" mat-header-cell *matHeaderCellDef>AÇÕES</th>
         <td mat-cell *matCellDef="let row">
-          <a class="edit" href="#">
+          <a class="edit" routerLink="update/{{ row.id }}">
             <i class="material-icons">edit</i>
           </a>
-          <a class="delete" href="#">
+          <a class="delete" routerLink="delete/{{ row.id }}">
             <i class="material-icons">delete</i>
           </a>
         </td>
