create e read da entidade livro

--- a/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
+++ b/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
@@ -8,6 +8,7 @@
       mat-raised-button
       color="primary"
       routerLink="create"
+      (click)="navegarParaCriarLivro()"
     >
       NOVO LIVRO
     </button>
